revisions to methods section

--- a/caseStudyWP/03-chap3.Rmd
+++ b/caseStudyWP/03-chap3.Rmd
@@ -627,7 +627,7 @@ We considered two alternative Ricker models for Interior Fraser Coho  to represe
 Future analyses to characterize Interior Fraser Coho dynamics and estimate biological reference points could further explore model structure by considering more varied approaches. For example, life-cycle models that partition the life cycle into separate marine and freshwater components allow for more direct representation of smolt abundance and subsequent marine survival than our current approach of using smolt-to-adult survival as a covariate in adult-to-adult spawner recruitment models [@bradfordRiskAssessmentThompson1998]. Treating smolt abundance as a latent variable within a life-cycle model would allow the smolt-to-adult survival rate index to be directly applied to smolt abundance [@ohlbergerDemographicChangesChinook2018]. Modelling frameworks that incorporate hatchery enhancement into spawner-recruitment models while allowing for differential productivity between hatchery- and natural-origin spawners could also be considered in the future [@falcyDetectingEffectsManagement2018].
 
 
-The consideration of multiple model structures requires a decision on which model, or models, should be used to assess stock status. One approach to accounting for uncertainty in underlying model structure is to integrate estimates of LRP status over alternative structures. We demonstrate this approach when using projection estimates of aggregate abundance LRPs, in which we combine projections under each SR model scenario before calculating the LRP. This approach is basically a model averaging approach in which both scenarios are equally weighted.  However, other methods of assigning weights among model are possible, such as weighting based on prediction skill [@kellValidationStockAssessment2021]. <!--CH added next sentence--> When model averaging, it is important to consider the plausibility of various models and the distribution of uncertain parameters (e.g., their variances and biases)[@dormannModelAveragingEcology2018; @millarModelAveragingStreamline2015]. It may be more appropriate to select one model instead of averaging over models when they provide competing hypotheses (i.e., bimodal distributions) with differing management implications [@millarModelAveragingStreamline2015].
+The consideration of multiple model structures requires a decision on which model, or models, should be used to assess stock status. One approach to accounting for uncertainty in underlying model structure is to integrate estimates of LRP status over alternative structures. We demonstrate this approach when using projection estimates of aggregate abundance LRPs, in which we combine projections under each SR model scenario before calculating the LRP. This approach is basically a model averaging approach in which both scenarios are equally weighted.  However, other methods of assigning weights among model are possible, such as weighting based on prediction skill [@kellValidationStockAssessment2021]. <!--CH added next sentence. I now realize that this fits in well in the Guidance WP in the disussion of model averaging in Methods section. I have put it there as well so could be deleted here (or kept)???--> When model averaging, it is important to consider the plausibility of various models and the distribution of uncertain parameters (e.g., their variances and biases)[@dormannModelAveragingEcology2018; @millarModelAveragingStreamline2015]. It may be more appropriate to select one model instead of averaging over models when they provide competing hypotheses (i.e., bimodal distributions) with differing management implications [@millarModelAveragingStreamline2015].
 
 
 ### Logisic Regression LRPs
