--- a/guidelinesWP/03-chap3.Rmd
+++ b/guidelinesWP/03-chap3.Rmd
@@ -112,8 +112,6 @@ To be consistent with the multidimensional approach to WSP status assessments de
 
 <!--KH: if these methods to account for uncertainties haven't been developed yet (i.e., aren't yet written up in a draft paper), I'm not sure we should mention them.   
 CH: the challenge is I had original text saying the Salmon Scanner did not incorporate uncertainties in underlying metrics, but Sue mentioned that its being developed and so it's not really a disadvantage-->
-Various benchmarks on spawner abundances have been identified to account for differences in data types, quantities and qualities among CUs. For data-rich CUs where spawner-recruitment relationships can be reliably estimated, @holtEvaluationBenchmarksConservation2009 recommend a lower benchmark at the abundance resulting in recovery to spawner abundances at maximum sustained yield, S~MSY~, in one salmon generation under equilibrium conditions, S~gen~. When applying stock-recruitment analyses, the spatial scale of density dependence should be carefully considered, which may be smaller or larger than the CU. Where recruitment time-series are not available and productivity is assumed to be moderate or high, and harvest rates moderate or low, specified percentiles of observed spawner time-series (e.g., 25^th^) can be used as a proxy for spawner-recruitment benchmarks [@holtEvaluatingBenchmarksBiological2018]. For Chinook, Sockeye, and Coho Salmon where production is often limited by the quantity of freshwater habitat, equilibrium spawner abundances can be predicted from habitat characteristics to inform abundance-based benchmarks [@nobleHabitatbasedEscapementBenchmarks2015; @parkenHabitatbasedMethodsEstimate2006]. For example, @parkenHabitatbasedMethodsEstimate2006 use the relationship between watershed area and spawner-recruitment based reference points in a meta-analysis of Chinook Salmon populations<!--LW: changed from stocks. Paper uses the word stock but I think they are different than SMUs or CUs (pre-CU and SMU definitions)--> from across the Pacific region to predict reference points for Chinook populations<!--LW: changed from stocks--> without recruitment data. Also, information on freshwater habitat capacity can be used to develop informative priors for stock-recruitment benchmarks estimated with Bayesian techniques (e.g., @atlasLandscapeBiophysicalControls2020 for Sockeye Salmon).
-
 
 \renewcommand*{\arraystretch}{1.4}
 \begin{table}[!htbp]
@@ -141,7 +139,9 @@ Various benchmarks on spawner abundances have been identified to account for dif
 
 
 
-\normalsize Similarly, metrics and benchmarks on long-term and short-term trends in spawner abundances are included in the Salmon Scanner. Long-term trends are measured by the ratio of recent generational geometric average spawner abundances relative to the long-term geometric average, and short-term trends are measured as the percent change in spawner abundances over 3 generations, the time period used in COSEWIC assessments [@holtEvaluationBenchmarksConservation2009]. Lower benchmarks on these metrics represent levels below which there is increased risk of extinction [@holtIndicatorsStatusBenchmarks2009]. <!--CH: I feel like this is repetitive given the table, but Sue asked for a more balanced description of metrics and benchmarks, covering all categories...-->
+\normalsize Various benchmarks on spawner abundances have been identified to account for differences in data types, quantities and qualities among CUs. For data-rich CUs where spawner-recruitment relationships can be reliably estimated, @holtEvaluationBenchmarksConservation2009 recommend a lower benchmark at the abundance resulting in recovery to spawner abundances at maximum sustained yield, S~MSY~, in one salmon generation under equilibrium conditions, S~gen~. When applying stock-recruitment analyses, the spatial scale of density dependence should be carefully considered, which may be smaller or larger than the CU. Where recruitment time-series are not available and productivity is assumed to be moderate or high, and harvest rates moderate or low, specified percentiles of observed spawner time-series (e.g., 25^th^) can be used as a proxy for spawner-recruitment benchmarks [@holtEvaluatingBenchmarksBiological2018]. For Chinook, Sockeye, and Coho Salmon where production is often limited by the quantity of freshwater habitat, equilibrium spawner abundances can be predicted from habitat characteristics to inform abundance-based benchmarks [@nobleHabitatbasedEscapementBenchmarks2015; @parkenHabitatbasedMethodsEstimate2006]. For example, @parkenHabitatbasedMethodsEstimate2006 use the relationship between watershed area and spawner-recruitment based reference points in a meta-analysis of Chinook Salmon populations<!--LW: changed from stocks. Paper uses the word stock but I think they are different than SMUs or CUs (pre-CU and SMU definitions)--> from across the Pacific region to predict reference points for Chinook populations<!--LW: changed from stocks--> without recruitment data. Also, information on freshwater habitat capacity can be used to develop informative priors for stock-recruitment benchmarks estimated with Bayesian techniques (e.g., @atlasLandscapeBiophysicalControls2020 for Sockeye Salmon).
+
+Similarly, metrics and benchmarks on long-term and short-term trends in spawner abundances are included in the Salmon Scanner. Long-term trends are measured by the ratio of recent generational geometric average spawner abundances relative to the long-term geometric average, and short-term trends are measured as the percent change in spawner abundances over 3 generations, the time period used in COSEWIC assessments [@holtEvaluationBenchmarksConservation2009]. Lower benchmarks on these metrics represent levels below which there is increased risk of extinction [@holtIndicatorsStatusBenchmarks2009]. <!--CH: I feel like this is repetitive given the table, but Sue asked for a more balanced description of metrics and benchmarks, covering all categories...-->
 
 In addition, metrics on the distribution of spawning within a CU can be considered in WSP assessments [@peacockReviewMetricsDistribution2010a; @peacockMetricsSamplingDesigns2012; @dfoIntegratedBiologicalStatus2016], but may not be required for all salmon species and to-date have not been included in the Salmon Scanner. In one example, the distribution of spawners across spawning sites and contractions in that distribution over time were considered in a WSP assessment for southern BC Chinook [@dfoIntegratedBiologicalStatus2016]. In addition, recovery targets for Interior Fraser Coho account for the distribution of spawners among sub-populations  [@ifcrtConservationStrategyCoho2006]. One challenge to applying metrics on distribution is identifying benchmarks that distinguish populations with increased risk of extinction.
 
@@ -314,7 +314,7 @@ where, $p$ is probability, $B_0$ and $B_1$ are estimated logistic regression par
 
 An example logistic regression fit is shown in Figure \@ref(fig:example-logisticFit), with LRPs associated with four probability thresholds, 0.5, 0.66, 0.90, 0.99, representing minimum levels above which probabilities are more likely than not, likely, very likely, and virtually certain, respectively, as defined by the International Panel on Climate Change, IPCC [@mastrandreaGuidanceNoteLead2010, Table \@ref(tab:LikelihoodsIPCC)]. @mastrandreaGuidanceNoteLead2010 also highlight the range 33%-66% as representing 'as likely as not', encompassing probabilities slightly above even (50%-66%). The mid-point at 50% represents an equal probability that all CUs will be above Red status as there is that they will not. <!-- CH omit: While DFO's Precautionary Approach Framework [@dfoFisheryDecisionMakingFramework2009] provides draft risk categories, with ~50% described as neutral, 50-75% described as 'moderately high', and "75%-95% as 'high', these pertain to specifically to preventable declines and may not be relevant for LRP estimation. -->An additional consideration in this step is the probability threshold for triggering LRPs described in DFO's Guidelines for the Implementation of Rebuilding Plans [@dfoScienceGuidelinesSupport2021].  These guidelines specify that, "unless otherwise defined in stock-specific precautionary approach frameworks, the LRP should be considered breached if the terminal year stock status indicator is estimated to be at or below the LRP with a greater than 50% probability or if the projected stock status indicator falls below the LRP with a greater than 50% probability under a zero catch scenario in a 1 year projection". While using a 50% probability threshold of one or more CUs having Red status is not directly analogous, in both cases the probability threshold chosen represents the probability of the stock avoiding serious harm.
 
-We recommend that positioning LRPs as thresholds with at least a 50% probability of all component CUs being above Red status, but do not recommend a specific probability level above that minimum.  Instead, we demonstrate LRPs under various choices of probability levels. Although LRPs are intended to be identified by Science to represent the best scientific estimate of the level below which serious harm is expected to occur [@dfoScienceAdvicePrecautionary2021] and without necessarily introducing additional precaution under uncertainty,<!--ref? CH: I realize this would benefit from a reference, but all I have is Rob Kronlund pers. comm....--> there is no scientific basis to choose one probability over others. We distinguish the biological basis of serious harm (any one CU having Red status) from the probability of this occurring, which implies a decision about risk tolerance.
+We recommend positioning LRPs as thresholds with at least a 50% probability of all component CUs being above Red status, but do not recommend a specific probability level above that minimum.  Instead, we demonstrate LRPs under various choices of probability levels. Although LRPs are intended to be identified by Science to represent the best scientific estimate of the level below which serious harm is expected to occur [@dfoScienceAdvicePrecautionary2021] and without necessarily introducing additional precaution under uncertainty,<!--ref? CH: I realize this would benefit from a reference, but all I have is Rob Kronlund pers. comm....--> there is no scientific basis to choose one probability over others. We distinguish the biological basis of serious harm (any one CU having Red status) from the probability of this occurring, which implies a decision about risk tolerance.
 
 
 <!--KH: when descibing our propbability thresholds above and in the following table, it may be worth noting that the values we selected were either mid-points or lower ends of the IPCC probability ranges.  Text from the case study paper that does this is as follows:
@@ -352,7 +352,7 @@ Another challenge when applying these choices to logistic regression-based LRPs 
 Uncertainty in logistic regression LRP estimates can be quantified based on confidence or credible intervals on the LRP estimate. See our application to Interior Fraser Coho Salmon for an example (Holt et al. In review).
 
 
-```{r example-logisticFit, fig.cap="Logistic regression fit to annual Bernoulli data to predict the probability of all component CUs being above their lower benchmark (LBM) as a function of aggregate SMU abundance. Each black dot represent a year in the observed time series as a Bernoulli indicator showing whether the requirement of all CUs above their lower benchmark, LBM was met (success = 1) or not (failure = 0) as a function of aggregate spawning abundance to the SMU. The black solid line is the maximum likelihood model fit, and the grey shaded region shows the 95\\% confidence interval around the fit model. Coloured lines illustrate aggregate abundance LRPs for 4 different probability thresholds: p* = 0.5 (yellow), 0.66 (blue), 0.90 (green), and 0.99 (orange) probability that all component CUs are greater than their respective LBM. Horizontal dotted lines intersect the y-axis at each probability threshold, while the solid vertical lines show the corresponding aggregate escapement that will represent the LRP.", out.width = '60%', warning=FALSE, echo=FALSE, fig.align="center"}
+```{r example-logisticFit, fig.cap="Logistic regression fit to annual Bernoulli data to predict the probability of all component CUs being above their lower benchmark (LBM) as a function of aggregate SMU abundance. Each black dot represents a year in the observed time series as a Bernoulli indicator showing whether the requirement of all CUs above their lower benchmark, LBM was met (success = 1) or not (failure = 0) as a function of aggregate spawning abundance to the SMU. The black solid line is the maximum likelihood model fit, and the grey shaded region shows the 95\\% confidence interval around the fit model. Coloured lines illustrate aggregate abundance LRPs for 4 different probability thresholds: p* = 0.5 (yellow), 0.66 (blue), 0.90 (green), and 0.99 (orange) probability that all component CUs are greater than their respective LBM. Horizontal dotted lines intersect the y-axis at each probability threshold, while the solid vertical lines show the corresponding aggregate escapement that will represent the LRP.", out.width = '60%', warning=FALSE, echo=FALSE, fig.align="center"}
 knitr::include_graphics("figure/methods-Example-LogisticLRP.png")
 ```
 
@@ -365,9 +365,9 @@ We used a single metric of annual spawner abundances to approximate CU status wh
 
 One advantage of logistic regression LRPs is that uncertainties in CU-level benchmarks and assessments can be accounted for explicitly. We used a statistically integrated estimation approach, where CU-level stock-recruitment models and associated CU-level benchmarks were estimated in the same model as the logistic regression and LRP derivation. In this way, the uncertainties from CU-level benchmarks and assessments were propagated through to the estimation of the LRP. While Bayesian estimation methods were not applied for the integrated logistic regression approach in any of our case study applications, this extension could be made in the future.  <!--CH omit?: The probability of all CUs being above their lower benchmarks in a given year can be predicted from aggregate abundance, with the predicted probability explicitly accounting for uncertainty in CU-level assessments against lower benchmarks.-->  
 
-In addition, structural uncertainties in underlying assumptions<!--required when developing CU-level benchmarks--> such as the form of the spawner-recruitment relationship, can be addressed in at least three ways. First, the weight-of-evidence for various assumptions can be evaluated to identify the assumption with the most support, which is then used for LRP development. This can include relying on support for various model forms provided in previous stock assessments or from meta-analyses. Second, various assumptions can be provided as sensitivity analyses demonstrating the impact of assumptions about CU dynamics on LRP estimates and current status. Third, LRPs can be averaged by, for example, combining posterior probability estimates. When averaging, LRPs can be weighted according to the inverse of the variances, the strength of evidence for each hypothesis based on statistical criteria (e.g., AIC), retrospective performance, or expert opinion [@rossiInferringFisheriesStock2019; @jardimOperationalizingEnsembleModels2021]. A simple example of model-averaging, in which two alternative models were weighted equally, was demonstrated for projection LRPs in the Interior Fraser Coho case study. 
-
+In addition, structural uncertainties in underlying assumptions<!--required when developing CU-level benchmarks--> such as the form of the spawner-recruitment relationship, can be addressed in at least three ways. First, the weight-of-evidence for various assumptions can be evaluated to identify the assumption with the most support, which is then used for LRP development. This can include relying on support for various model forms provided in previous stock assessments or from meta-analyses. Second, various assumptions can be provided as sensitivity analyses demonstrating the impact of assumptions about CU dynamics on LRP estimates and current status. Third, LRPs can be averaged by, for example, combining posterior probability estimates. When averaging, LRPs can be weighted according to the inverse of the variances, the strength of evidence for each hypothesis based on statistical criteria (e.g., AIC), retrospective performance, or expert opinion [@rossiInferringFisheriesStock2019; @jardimOperationalizingEnsembleModels2021]. A simple example of model-averaging, in which two alternative models were weighted equally, was demonstrated for projection LRPs in the Interior Fraser Coho case study. When model averaging, it is important to consider the plausibility of various models and the distribution of uncertain parameters (e.g., their variances and biases)[@dormannModelAveragingEcology2018; @millarModelAveragingStreamline2015]. It may be more appropriate to select one model instead of averaging over models when they provide competing hypotheses (i.e., bimodal distributions) with differing management implications [@millarModelAveragingStreamline2015].
 <!--CH: the following 2 lines give a line break before the next heading-->
+
 \
 &nbsp;
 *Alignment with LRP Principles*
@@ -377,7 +377,7 @@ Logistic regression LRPs do not use the best available information for CU status
 Logistic regression LRPs are operational (Principle 3) when harvest management occurs at the aggregate level and requires aggregate abundance LRPs to inform management decisions. However, they are more difficult to communicate being derived from model outputs, and they require the choice of probability of all CUs being above their lower benchmarks, which is difficult to justify from a science perspective. <!--CH removed since it's mostly repeated in the next pgh: "Logistic-regression based LRPs may not be appropriate operationally if new management procedures are applied that result in changes in covariance in dynamics among CUs. For fisheries without a history of weak-stock management the assumption of stationarity in covariance in exploitation may hold, as in Interior Fraser River Coho, supporting their application of logistic regression approaches to identify recovery targets."-->
 
 
-Reliability of estimation (Principle 4) depends on the reliability of underlying data and the fit of logistic regression as described by model diagnostics. <!--For this method, uncertainties can be propagated from CU-level benchmarks and status to LRPs.  -->One assumption of this method is that the relationship between aggregate abundance and CU-level status observed historically represents the current (and future) relationship. If the covariance in dynamics among CUs or relative productivities or capacities of CUs are non-stationary, something that is increasingly common for Pacific salmon, logistic regression LRPs may not represent serious harm under current or future conditions. Furthermore, LRPs may be unreliable if harvest strategies change over time such that relative exploitation of CUs varies (e.g., due to shifts towards weak stock management or when exploitation varies with the abundance of other species).  Uncertainties in CU status are accounted for explicitly when CU- and SMU-level models are statistically integrated, and confidence or credible intervals can provide quantitative measures of estimation uncertainty (Principle 5). Logistic regression LRPs are aligned with Principle 6 to the extent that aggregate abundances are an acceptably reliable predictor of CU level statuses, with the caveat that CU status on a single metric may deviate from the multidimensional approach recommended under the WSP.
+Reliability of estimation (Principle 4) depends on the reliability of underlying data and the fit of logistic regression as described by model diagnostics. <!--For this method, uncertainties can be propagated from CU-level benchmarks and status to LRPs.  -->One assumption of this method is that the relationship between aggregate abundance and CU-level status observed historically represents the current (and future) relationship. If the covariance in dynamics among CUs or relative productivities or capacities of CUs are non-stationary, a phenomenon that is increasingly common for Pacific salmon, logistic regression LRPs may not reliably represent serious harm under current or future conditions. Furthermore, LRPs may be unreliable if harvest strategies change over time such that relative exploitation of CUs varies (e.g., due to shifts towards weak stock management or when exploitation varies with the abundance of other species).  Uncertainties in CU status are accounted for explicitly when CU- and SMU-level models are statistically integrated, and confidence or credible intervals can provide quantitative measures of estimation uncertainty (Principle 5). Logistic regression LRPs are aligned with Principle 6 to the extent that aggregate abundances are an acceptably reliable predictor of CU level statuses, with the caveat that CU status on a single metric may deviate from the multidimensional approach recommended under the WSP.
 
 <!--CH: moved to uncertainties section in last chapter "Also, it is not possible to assess sensitivity of LRPs to  structural assumptions about covariance in population dynamics among CU and the relationship between aggregate abundances and CU statuses, as the LRP depends only on the logistic fit to observed data." -->
 <!--CH: the following 2 lines give a line break before the next heading-->
@@ -387,7 +387,7 @@ Reliability of estimation (Principle 4) depends on the reliability of underlying
 
 Similar to logistic regression LRPs, projection LRPs rely on the underlying relationship between aggregate abundances and status of component CUs. However, unlike logistic regression LRPs, the aggregate abundance where there is a specified probability of all CUs being above their lower benchmarks is identified from projections instead of directly from historical data.   
 
-In this approach, the population dynamics of individual CUs are projected with natural variability in population processes (e.g., recruitment and ages-at-maturity) and with covariance among CUs. Projections are done using current exploitation rates characterized with annual implementation uncertainty. Other exploitation scenarios can also be considered. Projections are run over an initialization period to remove the impacts of starting conditions, and then over multiple generations to identify aggregate abundances characterized by an equilibrium state where the distribution of abundances are stable. Projection LRPs are then estimated using these projected CU abundances to characterize the relationship between aggregate SMU-level spawner abundance and the probability that all CUs exceed their lower benchmarks (e.g., S~gen~). For the SMUs we considered for our case studies, we approximated the management approach with constant exploitation rates with implementation error, though more realistic management procedures that include escapement goals and exploitation limits, or a fixed series of exploitation rates that vary with abundances could be considered in future iterations.  <!-- CW: many salmon stocks are managed through input (effort) control rather than output control (e.g. TACs), so perhaps okay to model MP with a fixed ER model + implementation uncertainty, even though the fixed ER HCR is not actually part of the management objective-->As was done for logistic regression LRPs, status was estimated from a single metric rather than from the multidimensional approach within the Salmon Scannerl <!--KH: I would take out the following part of this sentence.  Because we always had abundance-based benchmarks for our true populations (i.e., er knew Sgen), we wouldn't have applied trends even if we used the multidimensional approach. Plus, we could have chosen to apply the absolute thresholds of 1500 fish in projections, but we didn't --> <!--omitted text: because the projections are meant to capture equilibrium conditions and are not appropriate for identifying status on temporal trends which are included as metrics in the Scanner. -->
+In this approach, the population dynamics of individual CUs are projected with natural variability in population processes (e.g., recruitment and ages-at-maturity) and with covariance among CUs. Projections are done using current exploitation rates characterized with annual implementation uncertainty. Other exploitation scenarios can also be considered. Projections are run over an initialization period to remove the impacts of starting conditions, and then over multiple generations to identify aggregate abundances characterized by an equilibrium state where the distribution of abundances are stable. Projection LRPs are then estimated using these projected CU abundances to characterize the relationship between aggregate SMU-level spawner abundance and the probability that all CUs exceed their lower benchmarks (e.g., S~gen~). For the SMUs we considered for our case studies, we approximated the management approach with constant exploitation rates with implementation error, though more realistic management procedures that include escapement goals and exploitation limits, or a fixed series of exploitation rates that vary with abundances could be considered in future iterations.  <!-- CW: many salmon stocks are managed through input (effort) control rather than output control (e.g. TACs), so perhaps okay to model MP with a fixed ER model + implementation uncertainty, even though the fixed ER HCR is not actually part of the management objective-->As was done for logistic regression LRPs, status was estimated from a single metric rather than from the multidimensional approach within the Salmon Scanner. <!--KH: I would take out the following part of this sentence.  Because we always had abundance-based benchmarks for our true populations (i.e., er knew Sgen), we wouldn't have applied trends even if we used the multidimensional approach. Plus, we could have chosen to apply the absolute thresholds of 1500 fish in projections, but we didn't --> <!--omitted text: because the projections are meant to capture equilibrium conditions and are not appropriate for identifying status on temporal trends which are included as metrics in the Scanner. -->
 
 One advantage of projection LRPs over logistic regression LRPs is that projections allow for explicit consideration of uncertainty in underlying assumptions about model parameters and the covariance among CUs by including those uncertainties as random components of the projections. Furthermore, unlike logistic regression LRPs, this method is not limited by historical data on CU status. To implement projection LRPs, we adapted a previously developed R package for performing closed-loop simulation modelling, samSim [@holtQuantitativeToolEvaluating2020; @freshwaterBenefitsLimitationsIncreasing2020], as described in the Appendix to Holt et al. (In review) and provided online (see Appendix \@ref(app:links)).  
 
@@ -408,7 +408,7 @@ After providing parameter distributions describing the CU-level population dynam
 Examples of projection LRPs derived from the aggregate abundance of each bin plotted against the proportion of year-trial combinations where all CUs were above their lower benchmark are shown in Figure \@ref(fig:example-projectedCurve). The choice of 200 fish bins was a trade-off between increasing smoothness of the curve with bins covering smaller range in aggregate abundances and computational limitations of small bins requiring a very large numbers of stochastic simulations to allow for a sufficient number of year-trial combinations within each bin to stabilize results. Also, for our case studies, 200 fish was within the range of uncertainty in observed spawner abundances. 
 
 
-```{r example-projectedCurve, fig.cap="Example of projected probability curve derived from projections over 30 years and 10,000 MC trials.  The curve shows the projected proportions of year-trial combinations where all CUs were above their lower benchmark as a function of aggregate SMU abundance, where aggregate abundances are shown in bins of 200 fish. Each dot in the curve represents a single combination of year and simulation trial. Coloured lines represent candidate LRPs calculated for 4 different probability thresholds, 0.5 (yellow), 0.66 (blue), 0.90 (green), and 0.99 (orange). Horizontal dotted lines intersect the y-axis at each probability threshold, while the solid vertical lines show the corresponding aggregate escapement that will represent the LRP.", out.width = '60%', warning=FALSE, echo=FALSE, fig.align="center"}
+```{r example-projectedCurve, fig.cap="Example of projected probability curve derived from projections over 30 years and 10,000 MC trials.  The curve shows the projected proportions of year-trial combinations where all CUs were above their lower benchmark as a function of aggregate SMU abundance, where aggregate abundances are shown in bins of 200 fish. Each dot in the curve represents a single combination of year and simulation trial. Coloured lines represent candidate LRPs calculated for 4 different probability thresholds, 0.5 (yellow), 0.66 (blue), 0.90 (green), and 0.99 (orange). Horizontal dotted lines intersect the y-axis at each probability threshold, while the solid vertical lines show the corresponding aggregate escapement that represents the LRP.", out.width = '60%', warning=FALSE, echo=FALSE, fig.align="center"}
 knitr::include_graphics("figure/methods-Example-ProjectedLRP.png")
 ```
 
