--- a/guidelinesWP/bib/refs.bib
+++ b/guidelinesWP/bib/refs.bib
@@ -63,7 +63,7 @@
 	author = {Liermann, M. C. and Sharma, R. and Parken, C. K.},
 	year = {2010},
 	note = {\_eprint: https://onlinelibrary.wiley.com/doi/pdf/10.1111/j.1365-2400.2009.00719.x},
-	keywords = {capacity, fish-habitat model, hierarchical model, life history, maximum sustainable yield, population dynamics},
+	keywords = {population dynamics, capacity, fish-habitat model, hierarchical model, life history, maximum sustainable yield},
 	pages = {40--51},
 }
 
@@ -87,14 +87,14 @@
 	pages = {xii + 88 p.},
 }
 
-@article{dfoIntegratedFisheriesManagement2021,
-	title = {Integrated {Fisheries} {Management} {Plan} 2021/22, {Salmon} {Southern} {BC}},
+@article{dfoSouthernSalmonIntegrated2021,
+	title = {Southern {Salmon} {Integrated} {Fisheries} {Management} {Plan} 2021/22},
 	volume = {21-2051},
 	url = {https://waves-vagues.dfo-mpo.gc.ca/Library/40980078.pdf},
 	language = {en},
 	author = {{DFO}},
 	year = {2021},
-	pages = {600 p.},
+	pages = {600p.},
 }
 
 @article{brown2020SummaryAbundance2020,
@@ -732,8 +732,8 @@ A comparison of the recovery objectives with recent historical abundances indica
 @article{dfoHarvestStrategyCompliant2006,
 	title = {A {Harvest} {Strategy} {Compliant} with the {Precautionary} {Approach}},
 	volume = {2006/023},
-	url = {https://waves-vagues.dfo-mpo.gc.ca/Library/322464.pdf},
-	journal = {DFO Canadian Science Advisory Secretariat Science Advisory Report},
+	url = {https://www.dfo-mpo.gc.ca/csas-sccs/Publications/SAR-AS/2006/2006_023-eng.htm},
+	journal = {DFO Can. Sci.  Advis. Sec. Sci. Advis. Rep.},
 	author = {DFO},
 	year = {2006},
 }
@@ -769,14 +769,13 @@ A comparison of the recovery objectives with recent historical abundances indica
 
 @article{dfoGuidanceAssessingThreats2014,
 	title = {Guidance on {Assessing} {Threats}, {Ecological} {Risk} and {Ecological} {Impacts} for {Species} at {Risk}},
-	volume = {2014/013},
-	url = {https://waves-vagues.dfo-mpo.gc.ca/Library/363987.pdf},
+	volume = {2014/013. (\textit{Erratum}:  June 2016)},
+	url = {https://www.dfo-mpo.gc.ca/csas-sccs/Publications/SAR-AS/2014/2014_013-eng.html},
 	abstract = {Threat Assessment • For species assessed as Extirpated, Endangered or Threatened by the Committee on the Status of Endangered Wildlife in Canada (COSEWIC), the assessment and prioritization of threats to survival and/or recovery of the species needs to be provided in the Recovery Potential Assessment (RPA).},
 	language = {en},
-	journal = {DFO Canadian Science Advisory Secretariat Science Advisory Report},
-	author = {DFO},
+	journal = {DFO Can. Sci. Advis. Sec. Sci. Advis. Rep.},
+	author = {{DFO}},
 	year = {2014},
-	pages = {21},
 	file = {Guidance on Assessing Threats, Ecological Risk and.pdf:C\:\\Users\\HoltC\\Zotero\\storage\\5YMKZMTN\\Guidance on Assessing Threats, Ecological Risk and.pdf:application/pdf},
 }
 
@@ -802,26 +801,24 @@ A comparison of the recovery objectives with recent historical abundances indica
 @article{dfoScienceGuidelinesSupport2021,
 	title = {Science {Guidelines} to {Support} {Development} of {Rebuilding} {Plans} for {Canadian} {Fish} {Stocks}},
 	volume = {2021/006},
-	url = {https://waves-vagues.dfo-mpo.gc.ca/Library/40965776.pdf},
+	url = {https://www.dfo-mpo.gc.ca/csas-sccs/Publications/SAR-AS/2021/2021_006-eng.html},
 	abstract = {Under the revised Fisheries Act a rebuilding plan is required when a stock falls to or below its Limit Reference Point (LRP). The LRP should be avoided with high probability to reduce the risk of serious harm and management actions to prevent further decline in stock status should be implemented before this point is reached.},
 	language = {en},
-	journal = {DFO Canadian Science Advisory Secretariat Science Advisory Report},
+	journal = {DFO Can. Sci. Advis. Sec. Sci. Advis. Rep.},
 	author = {DFO},
 	year = {2021},
-	pages = {20},
 	file = {Science Guidelines to Support Development of Rebui.pdf:C\:\\Users\\HoltC\\Zotero\\storage\\9VXDG27S\\Science Guidelines to Support Development of Rebui.pdf:application/pdf},
 }
 
 @article{dfoScienceAdvicePrecautionary2021,
 	title = {Science {Advice} for {Precautionary} {Approach} {Harvest} {Strategies} under the {Fish} {Stocks} {Provisions}},
 	volume = {2021/004},
-	url = {https://waves-vagues.dfo-mpo.gc.ca/Library/40965715.pdf},
+	url = {https://www.dfo-mpo.gc.ca/csas-sccs/Publications/SAR-AS/2021/2021_004-eng.html},
 	abstract = {This Science Advisory Report (SAR) provides advice to the Science Sector concerning the implications of the revised Fisheries Act (2019), particularly the Fish Stocks provisions (FSP). The FSP are viewed in light of Canada’s Fishery Decision-Making Framework Incorporating the Precautionary Approach (the ‘PA Policy’). The advice is organized into sections according to the text of the new legislation. Key points selected from the recommendations in the body of this report appear below.},
 	language = {en},
-	journal = {DFO Canadian Science Advisory Secretariat Science Advisory Report},
+	journal = {DFO Can. Sci. Advis. Sec. Sci. Advis. Rep.},
 	author = {{DFO}},
 	year = {2021},
-	pages = {34},
 	file = {Science Advice for Precautionary Approach Harvest .pdf:C\:\\Users\\HoltC\\Zotero\\storage\\YVC856LV\\Science Advice for Precautionary Approach Harvest .pdf:application/pdf},
 }
 
@@ -963,8 +960,9 @@ A comparison of the recovery objectives with recent historical abundances indica
 @article{dfoProceedingsNationalWorkshop2013,
 	title = {Proceedings of the {National} {Workshop} for {Technical} {Expertise} in {Stock} {Assessment} ({TESA}): {Maximum} {Sustainable} {Yield} ({MSY}) {Reference} {Points} and the {Precautionary} {Approach} when {Productivity} {Varies}; {December} 13-15, 2011},
 	volume = {2012/055},
+	url = {https://www.dfo-mpo.gc.ca/csas-sccs/Publications/Pro-Cr/2012/2012_055-eng.html},
 	language = {en},
-	journal = {DFO Canadian Science Advisory Secretariat Proceedings Series},
+	journal = {DFO Can. Sci. Advis. Sec.  Proceed. Ser.},
 	author = {{DFO}},
 	year = {2013},
 	pages = {58},
@@ -1061,13 +1059,12 @@ A comparison of the recovery objectives with recent historical abundances indica
 @article{dfoManagementProcedureFramework2021,
 	title = {A {Management} {Procedure} {Framework} for {Groundfish} {In} {British} {Columbia}},
 	volume = {2021/002},
-	url = {https://waves-vagues.dfo-mpo.gc.ca/Library/4095500x.pdf},
+	url = {https://publications.gc.ca/site/eng/9.897604/publication.html?wbdisable=true},
 	abstract = {For data-limited stocks, data are often insufficient to use traditional stock assessments to determine stock status relative to biological reference points.},
 	language = {en},
-	journal = {DFO Canadian Science Advisory Secretariat Science Advisory Report},
+	journal = {DFO  Can. Sci. Advis. Sec. Sci. Advis. Rep.},
 	author = {DFO},
 	year = {2021},
-	pages = {17},
 	file = {A Management Procedure Framework for Groundfish In.pdf:C\:\\Users\\HoltC\\Zotero\\storage\\5P7KAL8R\\A Management Procedure Framework for Groundfish In.pdf:application/pdf},
 }
 
@@ -1281,12 +1278,11 @@ A comparison of the recovery objectives with recent historical abundances indica
 @article{dfoProceedingsNationalPeer2016,
 	title = {Proceedings of the {National} {Peer} {Review} on the {Development} of {Technical} {Guidelines} for the {Provision} of {Scientific} {Advice} on the {Various} {Elements} of {Fisheries} and {Oceans} {Canada} {Precautionary} {Approach} {Framework}; {February} 28-{March} 1, 2012},
 	volume = {2015/005},
-	url = {https://waves-vagues.dfo-mpo.gc.ca/Library/40608025.pdf},
+	url = {https://publications.gc.ca/site/eng/9.819464/publication.html},
 	language = {en},
-	journal = {DFO Canadian Science Advisory Secretariat Science Proceedings Series},
+	journal = {DFO  Can. Sci. Advis. Sec. Proceed. Ser.},
 	author = {DFO},
 	year = {2016},
-	pages = {100},
 	file = {Proceedings of the National Peer Review on the Dev.pdf:C\:\\Users\\HoltC\\Zotero\\storage\\ZFZXSM8T\\Proceedings of the National Peer Review on the Dev.pdf:application/pdf},
 }
 
@@ -1746,11 +1742,12 @@ A comparison of the recovery objectives with recent historical abundances indica
 	note = {Last Modified: 2022-01-12},
 }
 
-@article{dfoNationalConservationStrategy2005,
-	title = {National {Conservation} {Strategy} for the {Sockeye} {Salmon}, ((\textit{{\textless}span class="nocase"{\textgreater}{Oncorhynchus} nerka{\textless}/span{\textgreater}}), {Cultus} {Population}, in {British} {Columbia}},
+@article{cultussockeyerecoveryteamNationalConservationStrategy2005,
+	title = {National conservation strategy for the sockeye salmon, (\textit{{Oncorhynchus} }\textit{nerka}), {Cultus} {Lake} population, in {British} {Columbia}},
+	volume = {Ottawa, Ontario},
 	url = {https://www.pac.dfo-mpo.gc.ca/science/habitat/cultus/docs/conservstrat.pdf},
 	journal = {Recovery of Nationally Endangered Wildlife (RENEW)},
-	author = {DFO},
+	author = {{Cultus Sockeye Recovery Team}},
 	year = {2005},
 	pages = {49pp.},
 	file = {CultusConsStrat.pdf:C\:\\Users\\HoltC\\Zotero\\storage\\PCL233C3\\CultusConsStrat.pdf:application/pdf},
@@ -1911,6 +1908,44 @@ A comparison of the recovery objectives with recent historical abundances indica
 	year = {2020},
 	note = {\_eprint: https://afspubs.onlinelibrary.wiley.com/doi/pdf/10.1002/fsh.10488},
 	file = {Walters et al_Has Steller Sea Lion Predation Impacted Survival of Fraser River Sockeye Salmon.pdf:C\:\\Users\\HoltC\\Zotero\\storage\\HLX5HA6Z\\Walters et al_Has Steller Sea Lion Predation Impacted Survival of Fraser River Sockeye Salmon.pdf:application/pdf},
+}
+
+@article{millarModelAveragingStreamline2015,
+	title = {Model averaging to streamline the stock assessment process},
+	volume = {72},
+	issn = {1095-9289, 1054-3139},
+	url = {https://academic.oup.com/icesjms/article/72/1/93/822983},
+	doi = {10.1093/icesjms/fsu043},
+	abstract = {Abstract
+            The current fish stock assessment process in Europe can be very resource- and time-intensive. The scientists involved require a very particular set of skills, acquired over their career, drawing from biology, ecology, statistics, mathematical modelling, oceanography, fishery policy, and computing. There is a particular focus on producing a single “best” stock assessment model, but as fishery science advances, there are clear needs to address a range of hypotheses and uncertainties, from large-scale issues such as climate change to specific ones, such as high observation error on young hake. Key to our discussion is the use of the assessment for all frameworks to translate hypotheses into models. We propose a change to the current stock assessment procedure, driven by the use of model averaging to address a range of plausible hypotheses, where increased collaboration between the varied disciplines within fishery science will result in more robust advice.},
+	language = {en},
+	number = {1},
+	urldate = {2022-04-13},
+	journal = {ICES Journal of Marine Science},
+	author = {Millar, Colin P. and Jardim, Ernesto and Scott, Finlay and Osio, Giacomo Chato and Mosqueira, Iago and Alzorriz, Nekane},
+	month = jan,
+	year = {2015},
+	pages = {93--98},
+	file = {Millar et al. - 2015 - Model averaging to streamline the stock assessment.pdf:C\:\\Users\\HoltC\\Zotero\\storage\\CUE5CW4Z\\Millar et al. - 2015 - Model averaging to streamline the stock assessment.pdf:application/pdf},
+}
+
+@article{dormannModelAveragingEcology2018,
+	title = {Model averaging in ecology: a review of {Bayesian}, information‐theoretic, and tactical approaches for predictive inference},
+	volume = {88},
+	issn = {0012-9615, 1557-7015},
+	shorttitle = {Model averaging in ecology},
+	url = {https://onlinelibrary.wiley.com/doi/10.1002/ecm.1309},
+	doi = {10.1002/ecm.1309},
+	abstract = {In ecology, the true causal structure for a given problem is often not known, and several plausible models and thus model predictions exist. It has been claimed that using weighted averages of these models can reduce prediction error, as well as better reflect model selection uncertainty. These claims, however, are often demonstrated by isolated examples. Analysts must better understand under which conditions model averaging can improve predictions and their uncertainty estimates. Moreover, a large range of different model averaging methods exists, raising the question of how they differ in their behaviour and performance. Here, we review the mathematical foundations of model averaging along with the diversity of approaches available. We explain that the error in model-averaged predictions depends on each model’s predictive bias and variance, as well as the covariance in predictions between models, and uncertainty about model weights. We show that model averaging is particularly useful if the predictive error of contributing model predictions is dominated by variance, and if the covariance between models is low. For noisy data, which predominate in ecology, these conditions will often be met. Many different methods to derive averaging weights exist, from Bayesian over information-theoretical to cross-validation optimized and resampling approaches. A general recommendation is difficult, because the performance of methods is often context dependent. Importantly, estimating weights creates some additional uncertainty. As a result, estimated model weights may not always outperform arbitrary fixed weights, such as equal weights for all models. When averaging a set of models with many inadequate models, however, estimating model weights will typically be superior to equal weights. We also investigate the quality of the confidence intervals calculated for model-averaged predictions, showing that they differ greatly in behaviour and seldom manage to achieve nominal coverage. Our overall recommendations stress the importance of non-parametric methods such as cross-validation for a reliable uncertainty quantification of model-averaged predictions.},
+	language = {en},
+	number = {4},
+	urldate = {2022-04-13},
+	journal = {Ecol Monogr},
+	author = {Dormann, Carsten F. and Calabrese, Justin M. and Guillera‐Arroita, Gurutzeta and Matechou, Eleni and Bahn, Volker and Bartoń, Kamil and Beale, Colin M. and Ciuti, Simone and Elith, Jane and Gerstner, Katharina and Guelat, Jérôme and Keil, Petr and Lahoz‐Monfort, José J. and Pollock, Laura J. and Reineking, Björn and Roberts, David R. and Schröder, Boris and Thuiller, Wilfried and Warton, David I. and Wintle, Brendan A. and Wood, Simon N. and Wüest, Rafael O. and Hartig, Florian},
+	month = nov,
+	year = {2018},
+	pages = {485--504},
+	file = {Dormann et al. - 2018 - Model averaging in ecology a review of Bayesian, .pdf:C\:\\Users\\HoltC\\Zotero\\storage\\UREIT7I2\\Dormann et al. - 2018 - Model averaging in ecology a review of Bayesian, .pdf:application/pdf},
 }
 
 @article{trochtaApplyingBayesianModel2021,
